--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: node_js
 node_js: 
 - "0.12.7"
+install:
+- "npm install"
+- "npm install bower -g"
+- "bower install"
 script:
 - gulp test
+#configure Travis to load Firefox before running gulp test
+before_script:
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
