change Travis to dev-co task

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ install:
 - "npm install"
 - "npm install bower -g"
 - "bower install"
+- "gem install scss_lint"
 script:
+- "gulp"
 - gulp test
 #configure Travis to load Firefox before running gulp test
 before_script:
