--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ install:
 - "npm install"
 - "npm install bower -g"
 - "bower install"
-- "gem install scss_lint"
-script:
-- "gulp"
-- gulp test
+- "gem install scss_lint -v 1.2.0"
 #configure Travis to load Firefox before running gulp test
 before_script:
 - "export DISPLAY=:99.0"
 - "sh -e /etc/init.d/xvfb start"
+script:
+- "gulp dev-ci"
+- gulp test
+env: CI=true
