--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sass": "~2.3.2",
     "gulp-sass-lint": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.7",
     "jasmine-core": "^2.5.2",
     "jshint": "^2.9.3",
     "jshint-stylish": "^2.2.1",
